src/syntax_analysis/expression/grouped_expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__grouped_expression__tests__test_syntax_analysis_for_grouped_expressions_case1.snap
---
source: src/syntax_analysis/expression/grouped_expression/tests/mod.rs
expression: "crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code))"

---
AbstractSyntaxTree {
    abstract_syntax_tree: [
        Expression {
            expression: Prefix {
                prefix_token: Minus,
                right_hand: Infix {
                    left_hand: Integer {
                        integer_token: Integer {
                            literal: "5",
                        },
                    },
                    operator_token: Multiply,
                    right_hand: Integer {
                        integer_token: Integer {
                            literal: "10",
                        },
                    },
                },
            },
        },
    ],
    syntax_parsing_errors: [],
}
