src/syntax_analysis/expression/grouped_expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__grouped_expression__tests__test_syntax_analysis_for_grouped_expressions_case4.snap
---
source: src/syntax_analysis/expression/grouped_expression/tests/mod.rs
expression: "crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap())"

---
Ok(
    [
        Expression {
            expression: Prefix {
                prefix: Not,
                right_hand: Infix {
                    left_hand: Boolean {
                        boolean: True,
                    },
                    operator: Equals,
                    right_hand: Boolean {
                        boolean: True,
                    },
                },
            },
        },
    ],
)
